Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,10 @@
 
-body {
-    background: url('images/pink-tulips-on-wood-texture_4460x4460.jpg') no-repeat;
-    /* -webkit-background-size: cover;
+html {
+    background: url('images/pink-tulips-on-wood-texture_4460x4460.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover; 
-    background-clip: content-box;
-    width : auto;
-    width: 100%;
-    height: 100%;
-    height: auto; */
-
-    width: 100%;
-    height: auto;
-     overflow: hidden;
+    background-size: cover;
 
 }
 
@@ -40,7 +31,13 @@ a{
 
 @media screen and (max-width: 500px) {
     html {
-       width: auto;
-       height: auto;
+        -webkit-background-size: auto;
+        -moz-background-size: auto;
+        -o-background-size: auto;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: auto;
+        height: 100%;
     }
 }
